src/aziz.css
:root {
  --primary: #00fffb;
}

/* Test Commit */
/* home screen */
.main-wrapper {
  height: auto;
  width: 100%;
}
/* Customize the scrollbar for webkit-based browsers */
/* Track (the background) */

/* Handle on hover */

/* Track on hover */

/* 
SCROLLBAR OF CAMERAS
*/

.cameras-layout,
.cards-layout,
.table-layout,
.table-layout-2 {
  scrollbar-width: thin;

  /* Customize the scrollbar track (background) */
  &::-webkit-scrollbar {
    width: 5px;
  }

  /* Customize the scrollbar thumb (the draggable part) */
  &::-webkit-scrollbar-thumb {
    background-color: var(--primary);
    border-radius: 6px;
    height: 60px;
  }

  &::-webkit-scrollbar-thumb:hover {
    background-color: #555;
  }

  &::-webkit-scrollbar-track {
    background-color: rgb(13, 31, 42);
  }
}

/* sidebar css starts here... */
.sidebar-inner {
  position: relative;
  height: 100vh;
  width: 70px;
  background-color: rgb(0, 16, 22);
  clip-path: polygon(0% 3%, 15% 0%, 100% 0%, 100% 85%, 17% 85%, 0% 82%);
  display: flex;
  flex-direction: column;
  left: 20px;
  top: 20px;
}

.sidebar-inner .sidebar-logo {
  height: 39px;
  width: 60px;
  object-fit: contain;
  position: relative;
  margin-left: auto;
  margin-right: auto;
}
.sidebar-inner .links-wrapper {
  position: relative;
  width: 100%;
  display: flex;
  flex-direction: column;
  gap: 3px;
  align-items: center;
  top: 40px;
}
.sidebar-inner .links-wrapper .link {
  position: relative;
  cursor: pointer;
  width: 100%;
  height: 50px;
  display: flex;
  justify-content: center;
  align-items: center;
}
.line {
  position: absolute;
  left: 0;
  height: 36px;
  width: 3px;
  background-color: var(--primary);
  border-radius: 0 4px 4px 0;
}

.icon {
  width: 40px;
  height: 32px;
  display: flex;
  justify-content: center;
  align-items: center;
  border-radius: 15px;
}
.icon-active {
  background-color: var(--primary);
  width: 40px;
  height: 32px;
  display: flex;
  justify-content: center;
  align-items: center;
  border-radius: 6px;
}
.sidebar-inner .last-col {
  position: relative;
  cursor: pointer;
  width: 100%;
  height: 50px;
  display: flex;
  justify-content: center;
  align-items: center;
  top: 35px;
}
.avatar-frame {
  position: relative;
  top: 40px;
  height: 30px;
  width: 30px;
  border-radius: 50%;
  padding: 2px;
  cursor: pointer;
}
.avatar-frame .avatar-frame-image {
  height: 100%;
  width: 100%;
  object-fit: cover;
}
/* end of sidebar css */
/* home page css code */

/* test div css  */

.test-div {
  height: 100vh;
  width: 100%;
  position: relative;
  padding: 20px 70px;
  overflow: hidden;
}
.test-div img {
  width: 100%;
  height: 94vh;
  position: absolute;
}
.innerWrapper {
  position: relative;
  display: flex;
  width: auto;
  /* max-width: 1100px; */
  min-width: 300px;
}
.innerWrapper .content {
  position: absolute;
  left: 40px;
  width: 100%;
  display: flex;
  flex-direction: row;
  gap: 25px;
}
.content .section {
  flex: 1;
  display: flex;
  flex-direction: column;
  gap: 6px;
  position: relative;
  top: 14px;
}
/* search component css goes here.. */

.input-div {
  display: flex;
  align-items: center;
  gap: 10px;
  /* position: relative; */
  background-color: rgb(9, 12, 17);
  width: 60%;
  min-width: 80px;
  height: 45px;
  padding: 0 20px;
  margin-top: 0;
  clip-path: polygon(0% 0%, 95% 0%, 100% 39%, 100% 85%, 0% 85%, 0% 82%);
}

.input-div input {
  /* position: absolute; */
  height: 100%;
  width: 100%;
  outline: none;
  background-color: transparent;
  color: white;
  border: none;
}

.input-div .search-icon {
  cursor: pointer;
  transition: transform 0.3s ease-in-out;
}
.input-div .search-icon:hover {
  transform: scale(1.2);
}

/* search component code ends here... */
/* action bar css  */
.action-bar {
  top: 5px;
  height: auto;
  width: 90%;
  padding: 0 10px;
}
.action-bar .left-portion {
  display: flex;
  gap: 5px;
  align-items: center;
}
.action-bar .left-portion .actionbar-icons {
  height: 30px;
  width: 40px;
  background-color: var(--primary);
  display: flex;
  justify-content: center;
  align-items: center;
  cursor: pointer;
}
.action-bar .right-portion p {
  margin: auto;
}

.right-portion .main-circle {
  display: flex;
  justify-content: center;
  align-items: center;
  position: relative;
  height: 42px;
  width: 42px;
  border-radius: 50%;
  background-color: rgb(0, 21, 27);
  border: 7px solid black;
  border-style: double;
}
.right-portion .plus-circle {
  position: absolute;
  height: 70%;
  width: 70%;
  border-radius: 50%;
  background-color: rgb(0, 37, 43);
  display: grid;
  place-content: center;
}
/* divider css */
.divider {
  position: relative;
  top: 50px;
  left: 0;
  width: 100%;
  display: flex;
  align-items: center;
  gap: 3px;
  height: 50px;
  margin: 0 -10px;
  /* background-color: red; */
}
.divider .bars {
  width: 30px;
  height: 1.2px;
  background-color: #13151c;
}
.divider .bar-startend {
  width: 20px;
}
/* action bar css ends here. */

/* Camera Layout css */
.cameras-layout {
  position: relative;
  margin: 20px 0;
  display: flex;
  flex-wrap: wrap;
  flex-direction: row;
  width: 100%;
  gap: 10px;
  /* max-height: 400px;
  overflow-y: scroll; */
}
.main-camera-wrapper {
  position: relative;
  width: 20%;
  height: 122px;
  background-image: url("./assets/images/layout3.png");
  background-position: center;
  background-repeat: no-repeat;
  background-size: contain;
  display: flex;

  flex-direction: column;
  padding: 4px 2px;
  gap: 5px;
}
.main-camera-wrapper h4 {
  font-size: 12px;
  color: white;
  text-align: start;
  margin: 2px 4px;
}
.main-camera-wrapper .camera-divider {
  /* position: absolute; */
  position: relative;
  margin: 0 auto;
  height: 1px;
  width: 90%;

  background-color: #ffffff;
}
.main-camera-wrapper .camera-src {
  position: relative;
  /* top: 2px; */
  height: 100%;
  width: 100%;
}
.main-camera-wrapper .camera-src video {
  position: absolute;
  height: 100%;
  width: 100%;
}
/* Camera Layout css ends here */
/* test div css */

.camera-cards {
  background-image: url("./assets/images/layout4.png");
  background-position: center;
  background-size: contain;
  background-repeat: no-repeat;
  height: 156;
  width: 217px;
  /* border: 1px solid yellow; */
}
.rootLayoutImage {
  width: 95%;
  height: 96vh;
  object-fit: 100% 100%;
  min-width: 500px;
}
/* single screen camera*/
.single-camera-frame {
  position: relative;
  margin: 0 auto;
  height: 300px;
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;

  width: 100%;
  /* max-width: 800px; */
}
.frame-inner {
  position: absolute;
  height: 100%;
  width: 100%;
  display: flex;
  flex-direction: column;
  padding: 10px;
}
.frame-inner video {
  /* position: relative; */
  width: auto;
  height: 250px;
  object-fit: cover;
}
.cards-layout {
  height: 30%;
  max-height: 30%;
  overflow-y: scroll;
  display: flex;
  flex-wrap: wrap;
  gap: 15px;
}
.table-layout {
  height: 12%;
  max-height: auto;
  overflow-y: scroll;
  flex-grow: 1;
}
.table-layout-2 {
  /* height: 10%; */
  max-height: auto;
  overflow-y: scroll;
}
/* .single-camera-frame {
  position: absolute;
  top: 0;
  left: 0;
} */
/* end of single camera */
/* usman table css */
.dashboard_td {
  color: var(--main-text-color);
  font-size: 12px;
  font-weight: 200;
  line-height: 12px;
  letter-spacing: 0em;
}
@media screen and (max-width: 576px) {
  .dashboard_td {
    color: var(--main-text-color);
    font-size: 10px;
    font-weight: 200;
    line-height: 12px;
    letter-spacing: 0em;
  }
}
.dashboard_th {
  color: var(--main-white-color);

  font-size: 14px;
  font-weight: 200;
  line-height: 17px;
  letter-spacing: 0em;
}
@media screen and (max-width: 576px) {
  .dashboard_th {
    color: var(--main-white-color);
    font-size: 11px;
    font-weight: 200;
    line-height: 17px;
    letter-spacing: 0em;
  }
}
.dashboard_td_1 {
  color: var(--main-red-color);
  font-size: 12px;
  font-weight: 200;
  line-height: 12px;
  letter-spacing: 0em;
}
@media screen and (max-width: 576px) {
  .dashboard_td_1 {
    color: var(--main-red-color);
    font-size: 10px;
    font-weight: 200;
    line-height: 12px;
    letter-spacing: 0em;
  }
}
.mmm {
  clip-path: polygon(
    0% 0%,
    93% 0%,
    100% 35%,
    100% 0%,
    100% 100%,
    0% 100%,
    0% 75%,
    0% 0%
  );
}
.custom-box {
  width: 200px;
  height: 200px;
  background-color: #333; /* Background color for the div */
  /* Position the ::before and ::after pseudo-elements at the top left and bottom right corners */
  position: relative;
}
.custom-box::before,
.custom-box::after {
  content: "";
  position: absolute;
  width: 5px; /* Border size for the corners */
  height: 5px; /* Border size for the corners */
  background-color: #fff; /* Border color for the corners */
}
.custom-box::before {
  top: 0;
  left: 0;
}
.custom-box::after {
  bottom: 0;
  right: 0;
}
/* usman css table ends here */
/* @media (min-width: 1100px) {
  .sidebar-inner {
    margin: 30px 50px;
  }
}
@media (max-width: 920px) {
  .sidebar-inner {
    margin: 30px 40px;
  }
  .single-camera-frame {
    width: 300px;
  }
  .single-camera-frame .frame-inner video {
    max-width: 300px;
  }
} */
@media (min-height: 200px) {
  .table-layout,
  .table-layout-2 {
    height: 12%;
    max-height: 12%;
  }
}
@media (min-height: 600px) {
  .table-layout,
  .table-layout-2 {
    height: 40%;
    max-height: 40%;
  }
}
@media (min-height: 1000px) {
  .table-layout,
  .table-layout-2 {
    height: 40%;
    max-height: 40%;
  }
}

